Add workflow_dispatch trigger to publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - "v*.*.*"
+  # Добавляем возможность ручного запуска
+  workflow_dispatch:
 
 jobs:
   build-and-publish:
