--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,16 +1,13 @@
 # Smithery configuration file: https://smithery.ai/docs/build/project-config
 
-# Use container runtime for Python projects
 runtime: "container"
 
-# Build configuration
 build:
   dockerfile: "Dockerfile"
   dockerBuildPath: "."
 
-# Start command configuration
 startCommand:
-  type: "stdio"
+  type: stdio
   configSchema:
     # JSON Schema defining the configuration options for the MCP
     type: object
@@ -28,31 +25,19 @@ startCommand:
       apiKey:
         type: string
         description: "LightRAG API key (optional)"
-        title: "API Key"
     required: []
-  commandFunction: |
+  commandFunction: |-
     (config) => {
-      const args = ['run', 'src/lightrag_mcp/main.py'];
-      
-      if (config.host && config.host !== '43.200.33.77') {
-        args.push('--host', config.host);
-      }
-      
-      if (config.port && config.port !== 9621) {
-        args.push('--port', config.port.toString());
-      }
-      
+      const args = ['-m', 'lightrag_mcp.main', '--host', config.host || '43.200.33.77', '--port', String(config.port || 9621)];
       if (config.apiKey) {
         args.push('--api-key', config.apiKey);
       }
-      
       return {
-        command: 'uv',
+        command: 'python',
         args: args
       };
     }
 
-# Example configuration for users
 exampleConfig:
   host: "43.200.33.77"
   port: 9621
